use "element" instead of "tag", where appropriate

--- a/02_manipulate-html-tags-from-r-with-htmltools.Rmd
+++ b/02_manipulate-html-tags-from-r-with-htmltools.Rmd
@@ -2,7 +2,7 @@
 
 **Learning objectives:**
 
-- Generate HTML tags from R.
+- Generate HTML elements from R.
 - Modify the attributes of HTML
 elements from R.
 - Access chidren elements from an
